test_suite/ui/missing_disciminant.rs
#[derive(Copy, Clone, enumflags2::BitFlags)]
enum Foo {
    OhNoTheresNoDiscriminant,
    WhatWillTheMacroDo,
}

fn main() {}
